<resources>
    <string name="app_name">Appume</string>
    <string name="detail_error_message">This data is not available</string>
    <string name="whatisappume">What is an Appume?</string>
    <string name="whoami">Who Am I?</string>
    <string-array name="certifications">
        <item>Active DoD Secret Clearance</item>
        <item>Oracle Certified Associate, Java SE 7 Programmmer</item>
        <item>Scaled Agile Framework (SAFe) 4 Practitioner</item>
    </string-array>
    <string name="androidprojects">Android Projects</string>
    <string-array name="skills">
        <item>Programming Languages:  Java, JavaScript, Kotlin, PHP, Swift, C++, HTML, SQL, XML</item>
        <item>Integrated Development Environments:  Eclipse, NetBeans, Android Studio, Xcode</item>
        <item>Frameworks:  JQuery, JavaScript Object Notation (JSON), Angular, Java Server Pages (JSP),
            Hibernate, Java Server Pages Standard Tag Libraries (JSTL), Spring MVC, Spring Boot</item>
        <item>Databases:  Oracle, MySQL, MongoDB, SQLite</item>
        <item>Version Control:  GitHub, Subversion, Atlassian, CVS</item>
    </string-array>
    <string-array name="education">
        <item>Android Developer Nanodegree\nUdacity\n2018
        </item>
        <item>M. S. Computer Science\nNorfolk State University\n2010
        </item>
        <item>B. S. Computer Science\nEast Tennessee State University\n2000
        </item>
    </string-array>
    <string-array name="experience">
        <item>Developer – March 2020 - Present</item>
        <item>Software Engineer – November 2019 - January 2020</item>
        <item>Java Developer – Octpber 2017 - September 2019</item>
        <item>Java Developer – August 2017 - October 2017</item>
        <item>Software Systems Engineer – April 2016 – May 2017</item>
        <item>Software Engineer – October 2014 - November 2015</item>
        <item>Programmer – March 2014 - October 2014</item>
        <item>Software Engineer – July 2012 - August 2013</item>
        <item>Software Engineer I – October 2011 - June 2012</item>
        <item>Patent Examiner – January 2011 - September 2011</item>
        <item>Laboratory Assistant - January 2010 - August 2010</item>
    </string-array>
    <string-array name="recommendations">
        <item>Bryan Boyd</item>
        <item>Reno McCormick</item>
        <item>David Dennis</item>
        <item>Frank M. Bird</item>
        <item>Lee Ash</item>
    </string-array>
    <string name="contactme">Contact Me</string>
    <string name="github_android">GitHub Android</string>
    <string name="github_ios">GitHub iOS</string>
    <string name="play_store">Play Store</string>
    <string name="app_store">App Store</string>
    <string name="banner">Banner</string>
    <string name="header">Header</string>
    <string name="logo">Logo</string>
    <string name="position">Position</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="timePeriod">Time Period</string>
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id_prod">ca-app-pub-8379108590476103/8182462061</string>
    <string name="admob_app_id">ca-app-pub-8379108590476103~2383340474</string>
    <string-array name="main_menu">
        <item>What is an Appume?</item>
        <item>Who Am I?</item>
        <item>Certifications</item>
        <item>Android Projects</item>
        <item>Skills</item>
        <item>Education</item>
        <item>Experience</item>
        <item>Recommendations</item>
        <item>Contact Me</item>
    </string-array>
    <string name="whatisappumedetail">An appume is simply a resume reimagined as a mobile app.
    It is an innovative way for me to showcase my skills and experience in an effort to land me
    a job as a mobile developer.</string>
    <string name="whoamidetail">I am a software engineer with nine years development experience
    supporting military, governmental and commercial programs including the design, development, and
    integration of computer software programs. A graduate of the Udacity Android Developer nanodegree
    program, I am looking to pivot into the mobile development space as either an Android or iOS
        developer or both as I have published apps to the Play Store and the App Store.</string>
    <string-array name="android_projects">
        <item>GoodForce Demo</item>
        <item>Popular Movies</item>
        <item>TSA Randomizer</item>
        <item>Flipulator</item>
    </string-array>
    <string-array name="android_project_details">
        <item>{\"name\":{\"app_name\":\"GoodForce Demo\",\"github_android_link\":\"http://www.github.com/dburgnerjr/Capstone-Project\",
            \"play_store_link\":\"\",\"github_ios_link\":\"\",\"app_store_link\":\"\",\"app_description\":[\"* Demo version of GoodForce
            app which will be a trivia game designed to help others pay down credit card debt, car loans, payday and personal loans.\",
            \"* Provides user with a trivia game that will allow the user to answer questions in an effort to gain extra lives (full
            version would allow the user to win money towards their debt).\"]}}
        </item>
        <item>{\"name\":{\"app_name\":\"Popular Movies\",\"github_android_link\":\"http://www.github.com/dburgnerjr/PopularMoviesGoogleUdacity\",
            \"play_store_link\":\"\",\"github_ios_link\":\"\",\"app_store_link\":\"\",\"app_description\":[\"* Presents the user with a grid
            arrangement of movie posters upon launch, sorted by popularity and by user rating.\",\"* Presents the user with detailed information,
            to include backdrop, user rating, title, overview, release date, trailers and reviews.\",\"* Created two other versions that presents
            TV show detailed information, one in Java with another in Kotlin.\"]}}
        </item>
        <item>{\"name\":{\"app_name\":\"TSA Randomizer\",\"github_android_link\":\"http://www.github.com/dburgnerjr/TSALeftOrRightFree\",
            \"play_store_link\":\"https://play.google.com/store/apps/details?id=com.danielburgnerjr.tsaleftorrightfree\",\"github_ios_link\":
            \"http://www.github.com/dburgnerjr/TSARandomizerIOS\",\"app_store_link\":\"\",\"app_description\":[\"* Allows the user to select
            a button that will display a left arrow or right arrow at random based on the app used by the TSA.\",\"* Allows the user to remove
            ads/restore purchases (iOS only) along with the ability to share the app with other users.\",\"* Completed Android version in two
            days.\"]}}
        </item>
        <item>{\"name\":{\"app_name\":\"Flipulator\",\"github_android_link\":\"http://www.github.com/dburgnerjr/FlipulatorFree\",
            \"play_store_link\":\"https://play.google.com/store/apps/details?id=com.danielburgnerjr.flipulatorfree\",\"github_ios_link\":
            \"https://github.com/dburgnerjr/FlipulatorIOS\",\"app_store_link\":\"\",\"app_description\":[\"* Created a real estate investment
            calculator designed to evaluate the viability of rehabbing a house to determine profitability for the real estate investor.\",
            \"* This app displays results of whether or not a property is profitable by showing the profit, ROI, and cash on cash return and
            can be sent to fellow investors and realtors in Excel spreadsheet format.\",\"* Refactored app using Android Studio as the IDE
            and Kotlin as the language.\"]}}
        </item>
    </string-array>
</resources>