<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#D1EEEE"
    tools:context=".AndroidProjectsActivity" >

    <ImageView
        android:id="@+id/imgBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/appume_banner" />

    <TextView
        android:id="@+id/activityAppStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgBanner"
        android:text="App Store Link"
        android:textSize="20sp"
        android:textColor="#454545" />

    <ListView
        android:id="@+id/activityAndroidProjectList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activityAppStore"
        android:textColor="#454545" />

    <LinearLayout
        android:id="@+id/llGitHub"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_above="@+id/activityAndroidProjectList"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnGitHubAndroid"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:text="@string/github_android"
            android:textSize="14sp"
            android:textStyle="bold"
            android:background="#D1EEEE"
            android:textColor="#454545" />

        <Button
            android:id="@+id/btnGitHubiOS"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:text="@string/github_ios"
            android:textSize="14sp"
            android:textStyle="bold"
            android:background="#D1EEEE"
            android:textColor="#454545" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llPlayAppStore"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_above="@+id/llGitHub"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnPlayStore"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:text="@string/play_store"
            android:textSize="14sp"
            android:textStyle="bold"
            android:background="#D1EEEE"
            android:textColor="#454545" />

        <Button
            android:id="@+id/btnAppStore"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:text="@string/app_store"
            android:textSize="14sp"
            android:textStyle="bold"
            android:background="#D1EEEE"
            android:textColor="#454545" />
    </LinearLayout>

</RelativeLayout>