<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#D1EEEE"
    tools:context=".RecommendationActivity" >

    <ImageView
        android:id="@+id/imgBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/banner"
        android:src="@drawable/appume_banner" />

    <TextView
        android:id="@+id/activityRecommendationHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgBanner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/header"
        android:textSize="32sp"
        android:textColor="#454545" />

    <ScrollView
        android:id="@+id/svActivityRecommendation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/activityRecommendationHeader"
        android:layout_marginTop="64dp"
        android:background="#D1EEEE" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/activityRecommendationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="0dp"
                android:textSize="20sp"
                android:textColor="#454545" />

        </RelativeLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_prod">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
